fixed wrapper width on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -156,7 +156,7 @@
     float: left;
 }
 
-.segment2{
+.pxtoemwrapper .segment2{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1em;
@@ -175,7 +175,7 @@
     font-size: 12px;
     width: 100%;
     resize: none;
-    height: 28em;
+    height: 90%;
     color: #bfbfbf;
     position: absolute;
 }
@@ -188,6 +188,7 @@ border-radius: 3px;
 cursor: pointer;
 font-size: 13px;
 min-height: 42px;
+width:30%;
 color: #fff;
 -webkit-box-shadow: 0 2px 0 #63973c;
 -moz-box-shadow: 0 2px 0 #63973c;
@@ -205,6 +206,7 @@ color: #bfbfbf;
 font-size: 15px;
 clear: both;
 float: left;
+width:40%;
 font-family: 'Monaco', sans-serif;
 max-height: 42px;
 }
